--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -17,6 +17,26 @@
 
         <script type="text/javascript" src="https://unpkg.com/socket.io-client@1.7.3/dist/socket.io.js" defer></script>
         <script type="text/javascript" src="https://unpkg.com/@feathersjs/client@3.5.1/dist/feathers.js" defer></script>
+    
+        <script type="text/javascript">
+        window.startIntro = function startIntro() {
+            introJs()
+            .setOptions({
+                nextLabel: "Weiter",
+                prevLabel: "Zurück",
+                doneLabel: "Fertig",
+                skipLabel: "Überspringen"
+            })
+            .start()
+        }
+        window.addEventListener("load", () => {
+            var continueTuorial=localStorage.getItem('Tutorial');
+            if(continueTuorial=='true') {
+                startIntro();
+                localStorage.setItem('Tutorial', false);
+            }
+        }) 
+        </script>
     {{/content}}
 
     {{#content "body"}}
@@ -39,7 +59,7 @@
                         </a>
                     </li>
                     {{#each sidebarItems}}
-                        <li>
+                        <li data-step={{this.introNumber}} data-intro="{{this.introText}}">
                             <a class="{{this.class}}" href="{{this.link}}"
                                  title="{{this.name}}">
                                 <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
@@ -94,8 +114,8 @@
                         </ol>
                     {{/if}}
 
-                    <ul class="nav navbar-nav float-xs-none dropdowns" data-step="1" data-intro="Hier finden Sie übergreifende Informationen">
-                        <li class="nav-item fullscreen-action" data-step="2" data-intro="Blendet Menus aus">
+                    <ul class="nav navbar-nav float-xs-none dropdowns" data-step="1" data-intro="Hier finden Sie übergreifende Informationen.">
+                        <li class="nav-item fullscreen-action" data-step="2" data-intro="Hiermit blenden Sie Menus aus.">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle btn-fullscreen" title="Fullscreen" data-toggle="dropdown">
                                     <i class="fa fa-expand"></i>
@@ -115,7 +135,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="nav-item notification-dropdown" data-step="4" data-intro="Hier erhalten sie Benachrichtigungen">
+                        <li class="nav-item notification-dropdown" data-step="4" data-intro="Hier erhalten sie Benachrichtigungen.">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
                                         recentNotifications}}recent{{/if}}" title="Benachrichtigungen" data-toggle="dropdown">
