JS ausgelagert & Kleinkram

--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -10,7 +10,7 @@
     {{/content}}
 
     {{#content "page"}}
-        <section class="section-timetable" data-step="7" data-intro="Hier finden Sie eine Übersicht über ihren Stundenplan und anstehende Termine">
+        <section class="section-timetable" data-step="7" data-intro="Hier finden Sie eine Übersicht über ihren Stundenplan und anstehende Termine.">
             <div class="row">
                 <div class="col-sm-12">
                     <h5>Stundenplan</h5>
@@ -57,7 +57,7 @@
         </section>
 
         {{#ifeq this.currentRole "Beta"}}
-            <section class="section section-my-material" data-step="8" data-intro="Hier finden Sie eine Übersicht über Ihre Materialien.">
+            <section class="section section-my-material">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12"><h5>Meine Materialien</h5></div>
