--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -18,25 +18,6 @@
         <script type="text/javascript" src="https://unpkg.com/socket.io-client@1.7.3/dist/socket.io.js" defer></script>
         <script type="text/javascript" src="https://unpkg.com/@feathersjs/client@3.5.1/dist/feathers.js" defer></script>
     
-        <script type="text/javascript">
-        window.startIntro = function startIntro() {
-            introJs()
-            .setOptions({
-                nextLabel: "Weiter",
-                prevLabel: "Zurück",
-                doneLabel: "Fertig",
-                skipLabel: "Überspringen"
-            })
-            .start()
-        }
-        window.addEventListener("load", () => {
-            var continueTuorial=localStorage.getItem('Tutorial');
-            if(continueTuorial=='true') {
-                startIntro();
-                localStorage.setItem('Tutorial', false);
-            }
-        }) 
-        </script>
     {{/content}}
 
     {{#content "body"}}
@@ -165,7 +146,7 @@
                             </div>
                         </li>
 
-                        <li class="nav-item help-drodown" data-step="5" data-intro="Hilfebereich für Ihre Fragen und Probleme">
+                        <li class="nav-item help-drodown" data-step="5" data-intro="Dies ist der Hilfebereich für Ihre Fragen und Probleme.">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle" title="Hilfe" data-toggle="dropdown">
                                     <i class="fa fa-question"></i>
@@ -201,7 +182,7 @@
                             {{/if}}
                         {{/if}}
 
-                        <li class="nav-item" data-step="6" data-intro="Einstellungen und Log-Out">
+                        <li class="nav-item" data-step="6" data-intro="Hier finden Sie Einstellungen und Log-Out.">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-secondary dropdown-toggle account-toggle"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
