--- a/views/administration/classes.hbs
+++ b/views/administration/classes.hbs
@@ -1,11 +1,21 @@
 {{#extend "administration/administration"}}
+    {{#content "styles" mode="append"}}
+        <link rel="stylesheet" href="/styles/lib/filter/filter.css"/>
+    {{/content}}
     {{#content "page"}}
         <div class="route-administration">
             <section class="section-school section-default">
-                <div class="container-fluid">
+                <div><feathers-filter id="filter"
+                                      filter='{{filterSettings}}'
+                                      add-label='Filter hinzufügen'
+                                      apply-label='Übernehmen'
+                                      cancle-label='Abbrechen'
+                                      handle-url='true'
+                /></div>
+                <div class="container-fluid ajaxcontent">
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            {{> "lib/components/table" head=head body=body}}
+                            {{> "lib/components/table" head=head body=body limit=false}}
                         </div>
                     </div>
                     <div class="row">
