--- a/static/styles/administration/progress.scss
+++ b/static/styles/administration/progress.scss
@@ -42,7 +42,7 @@
 
 .stages label:after {
   content: '\2713'; /* Check Symbol */
-  color: $primaryColor;
+  color: #4caf50;
   display: inline-block;
   font-size: 16px;
   box-sizing: content-box;
