--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -33,7 +33,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>E-Mail Adresse: *</label>
+                        <label>E-Mail-Adresse: *</label>
                         <input class="form-control linked" type="email" name="email" placeholder="user@schul-cloud.org" value="{{user.email}}" required>
                     </div>
                 {{#unless isTeacher}}
