--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -95,8 +95,8 @@
                         </ol>
                     {{/if}}
 
-                    <ul class="nav navbar-nav float-xs-none dropdowns" data-step="1" data-intro="Hier finden Sie übergreifende Informationen.">
-                        <li class="nav-item fullscreen-action" data-step="2" data-intro="Hiermit blenden Sie Menus aus.">
+                    <ul class="nav navbar-nav float-xs-none dropdowns" data-step="1" data-intro="Hier findest du übergreifende Informationen.">
+                        <li class="nav-item fullscreen-action" data-step="2" data-intro="Hiermit blendest du die Menüs aus.">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle btn-fullscreen" title="Fullscreen" data-toggle="dropdown">
                                     <i class="fa fa-expand"></i>
@@ -116,7 +116,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="nav-item notification-dropdown" data-step="4" data-intro="Hier erhalten sie Benachrichtigungen.">
+                        <li class="nav-item notification-dropdown" data-step="4" data-intro="Hier erhälst du Benachrichtigungen.">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
                                         recentNotifications}}recent{{/if}}" title="Benachrichtigungen" data-toggle="dropdown">
@@ -146,7 +146,7 @@
                             </div>
                         </li>
 
-                        <li class="nav-item help-drodown" data-step="5" data-intro="Dies ist der Hilfebereich für Ihre Fragen und Probleme.">
+                        <li class="nav-item help-drodown" data-step="5" data-intro="Dies ist der Hilfebereich für deine Fragen und Probleme.">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle" title="Hilfe" data-toggle="dropdown">
                                     <i class="fa fa-question"></i>
@@ -182,7 +182,7 @@
                             {{/if}}
                         {{/if}}
 
-                        <li class="nav-item" data-step="6" data-intro="Hier finden Sie Einstellungen und Log-Out.">
+                        <li class="nav-item" data-step="6" data-intro="Hier findest du Einstellungen und Log-Out.">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-secondary dropdown-toggle account-toggle"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
