--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -1,5 +1,5 @@
 <section id="loginarea" class="card">
-    <div class="card-block" data-step="3" data-intro="Wenn Ihre Schule bereits über Schul-Cloud-Accounts verfügt, dann können Sie sich hier mit Ihren persönlichen Anmeldedaten einloggen.">
+    <div class="card-block" data-step="3" data-intro="Wenn deine Schule bereits über Schul-Cloud-Accounts verfügt, dann kannst du dich hier mit deinen persönlichen Anmeldedaten einloggen.">
         <h4 class="card-title">Login</h4>
         <div class="card-text form-wrapper">
             {{> "lib/components/notification"}}
