Teacher view small fixes

--- a/views/administration/forms/form-students.hbs
+++ b/views/administration/forms/form-students.hbs
@@ -19,5 +19,10 @@
 
 <div class="form-group">
     <label for="create_email">E-Mail-Adresse:</label>
-    <input id="create_email" class="form-control" name="email" type="text" placeholder="test@test.org" required />
+    <input id="create_email" class="form-control" name="email" type="email" placeholder="test@test.org" required />
 </div>
+
+<label>
+    <input name="sendRegistration" type="checkbox" value="sendRegistration"/>
+    Registrierungslink an Schüler senden
+</label>
