--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -20,6 +20,18 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-sm-12 no-padding">
+                            <center>
+                                <i class="fa fa-times consent-status"></i>
+                                Keine Einverständnis &emsp;
+                                <i class="fa fa-circle-thin consent-status"></i>
+                                Eltern haben zugestimmt (oder Schüler ist über 18) &emsp;
+                                <i class="fa fa-check consent-status"></i>
+                                Alle Zustimmungen vorhanden
+                            </center>
+                        </div>
+                    </div>
+                    <div class="row">
                         {{> "lib/components/pagination" settings=pagination }}
                     </div>
                     <div class="row">
