little text change

--- a/views/authentication/forms/demo-login.hbs
+++ b/views/authentication/forms/demo-login.hbs
@@ -1,5 +1,5 @@
 <section id="loginarea" class="card">
-    <div class="card-block" data-step="2" data-intro="Du möchtest die Schul-Cloud entdecken? Mit Hilfe unserer Demo Funktion kannst du die Schul-Cloud sowohl aus Lehrer als auch aus Schüler Perspektive erkunden.">
+    <div class="card-block" data-step="2" data-intro="Du möchtest die Schul-Cloud entdecken? Mit Hilfe unserer Demo Funktion kannst du die Schul-Cloud sowohl aus Lehrer- als auch aus Schülerperspektive erkunden.">
         <h4 class="card-title">Demo</h4>
         <div class="card-text form-wrapper">
             {{> "lib/components/notification"}}
