--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -144,7 +144,7 @@
             in der {{theme.short_title}} anmelden. Bitte geben Sie die Daten an Ihr Kind weiter. Zusätzlich haben Sie und Ihr Kind die Daten per E-Mail erhalten.
             <div class="print">
               <div class="recap">
-                <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
+                <!--<p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>-->
                 <p>E-Mail: <i data-from="student-email"></i></p>
                 <p>Passwort: <i class="student-password">********</i></p>
               </div>
