--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -107,7 +107,7 @@
           <p>Mit folgenden Daten kannst du dich in der {{theme.short_title}} anmelden. Bitte bewahre die Anmeldedaten für den ersten Login auf.</p>
           <div class="print">
             <div class="recap">
-              <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
+              <!--<p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>-->
               <p>E-Mail: <i data-from="student-email"></i></p>
               <p>Passwort: <i class="student-password">********</i></p>
             </div>
