--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -27,10 +27,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <!--<div class="form-group">
                         <label>Username: *</label>
                         <input class="form-control" disabled="true" placeholder="Benutzername" name="displayName" type="text" value="{{user.displayName}}"/>
-                    </div>
+                    </div>-->
 
                     <div class="form-group">
                         <label>E-Mail-Adresse: *</label>
