--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -1,9 +1,9 @@
 <input name="classid" type="hidden" value="{{class._id}}"/>
 
-<a class="d-block text-muted mb-1"
+<a class="d-block mb-1"
     href="/administration/classes/{{@root.class/_id}}/edit"
     title="Klasse '{{@root.class.name}}' bearbeiten.">
-    <i class="fa fa-pencil"></i> Klasse bearbeiten
+    <i class="fa fa-pencil red"></i> Klasse umbenennen
 </a>
 
 <div class="form-group">
