Fix "keepYear" chechbox (class edit/create)

--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -3,7 +3,7 @@
 <a class="d-block mb-1"
     href="/administration/classes/{{@root.class/_id}}/edit"
     title="Klasse '{{@root.class.name}}' bearbeiten.">
-    <i class="fa fa-pencil red"></i> Klasse umbenennen
+    <i class="fa fa-pencil"></i> Klasse umbenennen
 </a>
 
 <div class="form-group">
