--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -1,7 +1,5 @@
 <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
-{{#unless edit}}
-    <p>Erstelle eine neue Klasse:</p>
-{{else}}
+{{#if edit}}
     <input type="hidden" name="_id" value="{{class._id}}" />
 
     <a class="d-block mb-1"
@@ -9,12 +7,11 @@
         title="Klasse '{{@root.class.name}}' verwalten.">
         <i class="fa fa-users"></i> Klasse verwalten
     </a>
-{{/unless}}
+{{/if}}
 
 <div class="form-group">
     <label>Schuljahr *</label>
-
-    <select class="linked" name="schoolyear" data-linktext data-placeholder="Schuljahr auswählen">
+    <select class="linked" name="schoolyear" data-linktext data-placeholder="Schuljahr auswählen" {{#ifCond edit '&&' isCustom}}{{#unless class.keepYear}}disabled="true"{{/unless}}{{/ifCond}}>
         {{#each schoolyears}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
                 {{this.name}}
@@ -51,14 +48,13 @@
                     </option>
                 {{/each}}
             </select>
-            <input id="thisGradeLevelId" type="hidden" class="hidden" value="{{class.selectedGradeLevel._id}}" />
         </div>
         <div class="form-group col-sm-6 col-xs-12">
             <label>Klassenbezeichnung</label>
             <input class="form-control linked" name="classsuffix" type="text" placeholder="a, b, c, ..., I, II, III, ..., etc." value="{{class.classsuffix}}" {{#if isCustom}}disabled{{/if}}/>
         </div>
     </div>
-    <p>Deine Klasse passt nicht ins klassische Schema? <a href="#" class="createcustom">Mehr Optionen</a>.</p>
+    <p class="mt-1">Deine Klasse passt nicht ins klassische Schema? <a href="#" class="createcustom">Mehr Optionen</a>.</>
     <section id="createcustom" class="{{#unless isCustom}}hidden{{/unless}}">
         <p>Du kannst jahrgangsunabhängige Klassen mit freier Bezeichnung erstellen. Diese Klassen können nicht vom Administrator <i>"versetzt"</i> werden, sondern müssen manuell aktualisiert werden.</p>
         <div class="form-group">
@@ -66,35 +62,38 @@
             <input class="form-control linked" name="classcustom" type="text" placeholder="z.B. Froschklasse 3-4" required value="{{class.customName}}" {{#unless isCustom}}disabled{{/unless}}/>
         </div>
         <label>
-            <input name="keepyear" type="checkbox" value="true" {{#if edit}}{{#if class.keepYear}}checked{{/if}}{{else}}checked{{/if}} {{#unless isCustom}}disabled{{/unless}}/>
+            <input name="keepyear" type="checkbox" value="true" {{#ifCond edit '&&' isCustom}}{{#if class.keepYear}}checked{{/if}}{{else}}checked{{/ifCond}} {{#unless isCustom}}disabled{{/unless}}/>
             <span>Schuljahreszuordnung beibehalten</span>
         </label>  
     </section>
 
     <div class="recap">
-        <p>Klassenname: 
-            <span class="class-default {{#if isCustom}}hidden{{/if}}">
+        <div class="class-default {{#if isCustom}}hidden{{/if}}">
+            <p>Klassenname: 
+                    <span data-from="grade"></span><span data-from="classsuffix"></span>
+            </p>
+            <p>Schuljahr: <span data-from="schoolyear"/></p>
+        </div>
+        <div class="class-custom {{#unless isCustom}}hidden{{/unless}}">
+            <p>Klassenname: 
                 <span data-from="grade"></span><span data-from="classsuffix"></span>
-            </span>
-            <span class="class-custom {{#unless isCustom}}hidden{{/unless}}">
-                <span data-from="classcustom"></span>
-            </span>
-        </p>
-        <p>Schuljahr: <span data-from="schoolyear"/></p>
+            </p>
+            <p id="recap-keepyear" {{#if edit}}class="{{#unless class.keepYear}}hidden{{/unless}}"{{/if}}>Schuljahr: <span data-from="schoolyear"/></p>
+        </div>
     </div>
 </section>
-<div>
 
-</div>
-{{#unless edit}}
-    <button class="btn btn-primary w-100 mb-1" type="submit" disabled>Klasse hinzufügen</button>
-    {{#userHasPermission 'ADMIN_VIEW'}}
+<div class="modal-footer mt-1">
+    <a href="/administration/classes" class="btn btn-secondary">Abbrechen</a>
+    {{#unless edit}}
+        <button class="btn btn-primary" type="submit" disabled>Klasse hinzufügen</button>
+        {{#userHasPermission 'ADMIN_VIEW'}}
+        {{else}}
+            <p>Im nächsten Schritt kannst du Schüler zur Klasse einladen oder hinzufügen.</p>
+        {{/userHasPermission}}
     {{else}}
-        <p>Im nächsten Schritt kannst du Schüler zur Klasse einladen oder hinzufügen.</p>
-    {{/userHasPermission}}
-{{else}}
-    <button class="btn btn-primary w-100 mb-1" type="submit" disabled>Änderungen speichern</button>
-{{/unless}}
+        <button class="btn btn-primary" type="submit" disabled>Änderungen speichern</button>
+    {{/unless}}
+</div>
 
 
-<a href="/administration/classes" class="btn btn-secondary mt-2 w-100">Abbrechen</a>
